@@ -1,6 +1,7 @@
 package org.dbp.service.contabilidad;
 
 import static org.junit.Assert.assertEquals;
+import static org.junit.Assert.assertNotNull;
 import static org.junit.Assert.assertNull;
 
 import java.math.BigDecimal;
@@ -11,7 +12,6 @@ import org.dbp.bom.contabilidad.LineasAsiento;
 import org.dbp.bom.contabilidad.enums.TipoMovimientoContable;
 import org.dbp.core.conf.TestConfiguracion;
 import org.junit.FixMethodOrder;
-import org.junit.Ignore;
 import org.junit.Test;
 import org.junit.runner.RunWith;
 import org.junit.runners.MethodSorters;
@@ -30,20 +30,20 @@ public class AsientosServiceTest {
 	@Autowired private AsientosService asientoService;
 	@Autowired private CuentaService cuentaService;
 	
-	private static Long id;
+	private static Long identificador;
 	
 	@Test
 	public void test001Buscar(){
-		Asientos asiento=asientoService.obtenerId(1L);
-		assertEquals("Id",new Long(1),asiento.getId());
+		final Asientos asiento=asientoService.obtenerId(1L);
+		assertEquals("Id",Long.valueOf(1),asiento.getId());
 	}
 	@Commit
 	@Test
 	public void test002Crear(){
-		Asientos asiento = new Asientos();
+		final Asientos asiento = new Asientos();
 		asiento.setDescripcion("Asiento de prueba");
 		asiento.setLineas(new ArrayList<LineasAsiento>());
-		LineasAsiento linea=new LineasAsiento();
+		final LineasAsiento linea=new LineasAsiento();
 		linea.setAsiento(asiento);
 		linea.setImporte(BigDecimal.valueOf(1000));
 		linea.setTipoMovimientoContable(TipoMovimientoContable.D);
@@ -51,13 +51,13 @@ public class AsientosServiceTest {
 		linea.setCuenta(cuentaService.obtenerId("4000"));
 		asiento.getLineas().add(linea);
 		asientoService.crear(asiento);
-		id=asiento.getId();
-		System.out.println("eco" +asiento.getId());
+		identificador=asiento.getId();
+		assertNotNull("Existe el identificador", identificador);
 	}
 	
 	@Test
 	public void test003Recuperar(){
-		Asientos asiento = asientoService.obtenerId(id);
+		final Asientos asiento = asientoService.obtenerId(identificador);
 		assertEquals("Revisar la descricpción","Asiento de prueba",asiento.getDescripcion());
 		assertEquals("Número de elementos",1,asiento.getLineas().size());
 		assertEquals("Linea de importe",1000L,asiento.getLineas().get(0).getImporte().intValue());
@@ -67,12 +67,14 @@ public class AsientosServiceTest {
 	@Commit
 	@Test
 	public void test004eliminar(){
-		asientoService.eliminar(asientoService.obtenerId(id));
+		final Asientos asiento = asientoService.obtenerId(identificador);
+		assertNotNull("Existe el asiento", asiento);
+		asientoService.eliminar(asiento);
 	}
 	
 	@Test
 	public void test005Recuperar(){
-		Asientos asiento = asientoService.obtenerId(id);
+		final Asientos asiento = asientoService.obtenerId(identificador);
 		assertNull("No se espera el asiento por que ha sido borrado.",asiento);
 	}
 }
